model-deployment/k8s-local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  type: ClusterIP
  ports:
    - port: 9696
      targetPort: 9696
  selector:
    app: web

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres

---

apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http-grafana
      protocol: TCP
  selector:
    app: grafana

---

apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: adminer
